Endpoints for Creatives by Type
