# api.dynode/openapi.json
@@ -122,7 +122,7 @@
     "/data/creatives": {
       "get": {
         "summary": "Get creatives data",
-        "tags": ["Data"],
+        "tags": ["Creatives"],
         "responses": {
           "200": { "description": "Creatives data retrieved" },
           "401": { "description": "Unauthorized" }
@@ -130,7 +130,7 @@
       },
       "post": {
         "summary": "Post creatives data",
-        "tags": ["Data"],
+        "tags": ["Creatives"],
         "responses": {
           "200": { "description": "Creatives data created" },
           "401": { "description": "Unauthorized" }
@@ -138,7 +138,7 @@
       },
       "put": {
         "summary": "Post creatives data",
-        "tags": ["Data"],
+        "tags": ["Creatives"],
         "responses": {
           "200": { "description": "Creatives data changed" },
           "401": { "description": "Unauthorized" }
@@ -146,7 +146,109 @@
       },
       "delete": {
         "summary": "Post creatives data",
-        "tags": ["Data"],
+        "tags": ["Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data deleted" },
+          "401": { "description": "Unauthorized" }
+        }
+      }
+    },
+    "/data/creatives/assemblies": {
+      "get": {
+        "summary": "Get assembled creatives data",
+        "tags": ["Assembled Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data retrieved" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "post": {
+        "summary": "Post creatives data",
+        "tags": ["Assembled Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data created" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "put": {
+        "summary": "Post creatives data",
+        "tags": ["Assembled Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data changed" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "delete": {
+        "summary": "Post creatives data",
+        "tags": ["Assembled Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data deleted" },
+          "401": { "description": "Unauthorized" }
+        }
+      }
+    },
+    "/data/creatives/dynamics": {
+      "get": {
+        "summary": "Get dynamic creatives data",
+        "tags": ["Dynamic Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data retrieved" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "post": {
+        "summary": "Post creatives data",
+        "tags": ["Dynamic Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data created" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "put": {
+        "summary": "Post creatives data",
+        "tags": ["Dynamic Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data changed" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "delete": {
+        "summary": "Post creatives data",
+        "tags": ["Dynamic Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data deleted" },
+          "401": { "description": "Unauthorized" }
+        }
+      }
+    },
+    "/data/creatives/interactives": {
+      "get": {
+        "summary": "Get interactive creatives data",
+        "tags": ["Interactive Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data retrieved" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "post": {
+        "summary": "Post creatives data",
+        "tags": ["Interactive Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data created" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "put": {
+        "summary": "Post creatives data",
+        "tags": ["Interactive Creatives"],
+        "responses": {
+          "200": { "description": "Creatives data changed" },
+          "401": { "description": "Unauthorized" }
+        }
+      },
+      "delete": {
+        "summary": "Post creatives data",
+        "tags": ["Interactive Creatives"],
         "responses": {
           "200": { "description": "Creatives data deleted" },
           "401": { "description": "Unauthorized" }
